<resources>
    <string name="app_name">Ease Yoga</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">"Selamat Datang, %1$s!"</string>
    <string name="welcome_login">Hi, Welcome Back!</string>
    <string name="sub_welcome">Hello again, you\'ve been missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="pass_empty">Harap Masukkan Password Anda!</string>
    <string name="userpass_error">Email Dan Password Salah</string>
    <string name="create_an_account">Create an Account</string>
    <string name="let_s_yoga_together">Let\'s yoga together!</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="sign_in">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name_empty">Masukkan Nama Anda!</string>
    <string name="email_empty">Masukkan Email Anda!</string>
    <string name="email_error">Email Anda Tidak Valid!</string>
    <string name="regist_succsess">Pendaftaran Berhasil</string>
    <string name="dialog_error">Maaf Ada Kesalahan</string>
    <string name="statement_error">Kesalahan Tidak Diketahui</string>
    <string name="pass_error">Password Harus Lebih Dari 8 Huruf!</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="logout_confirm">Apakah anda ingin keluar?</string>
    <string name="logout_yes">Ya</string>
    <string name="logout_no">Tidak</string>
    <string name="welcome_massage">Welcome</string>
    <string name="pose">Pose </string>
    <string name="timer">00:00</string>
    <string name="benar">Benar</string>
    <string name="salah">Salah</string>
</resources>